fix audit, fix data file, add validation
