# src/main/java/com/example/dp/model/professor/service/ProfessorService.java
@@ -3,6 +3,7 @@ package com.example.dp.model.professor.service;
 
 import com.example.dp.model.professor.repository.ProfessorRepository;
 import com.example.dp.model.schoolclass.entity.SchoolClass;
+import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import com.example.dp.model.professor.entity.Professor;
@@ -33,12 +34,31 @@ public class ProfessorService {
         return professorRepository.findById(id);
     }
 
-    public void deleteById(Long id) {
-        professorRepository.deleteById(id);
+    public void delete(Professor professor){
+        professorRepository.delete(professor);
     }
 
+//    public void deleteById(Long id) {
+////        if(!getClassesForProfessor(id).isEmpty()){
+////            throw new ProfessorAssignedToClassException("Professor can't be deleted is assigned to classes");
+////        }
+//        professorRepository.deleteById(id);
+//    }
+
+    public void deleteProfessor(Long id) {
+        professorRepository.findById(id).ifPresent(professor -> {
+            // remove professor from each class
+            professor.getClasses().forEach(c -> c.getProfessors().remove(professor));
+            professor.getClasses().clear();
+            professorRepository.delete(professor);
+        });
+    }
     public boolean existsById(Long id) {
         return professorRepository.existsById(id);
+    }
+
+    public boolean isProfessorByCode(String code) {
+       return professorRepository.existsByCode(code);
     }
 
     public Set<SchoolClass> getClassesForProfessor(Long professorId) {
